--- a/styles.css
+++ b/styles.css
@@ -85,8 +85,8 @@ footer:hover {
 table {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: auto;
+    /*width: 100%;*/
+    height: 100%;
     border: 4px solid black;
     background-color: rgb(0, 0, 0);
     /*border-collapse: collapse;*/
@@ -96,7 +96,7 @@ table {
     border: 1px solid black;
     text-align: center;
     width: 100px;
-    height: 100%;
+    height: 100px;
     align-content: center;
     justify-content: center;
     background-color: rgb(255, 117, 117);
@@ -112,9 +112,10 @@ table {
 }
 
 .img_casilla{
-    width: 100%;
-    height: auto;
-    display: block;
+    width: auto;
+    height: 100%;
+    padding: 0;
+    display: flex;
 }
 .txt_casilla {
     font-size: 20px;
