--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
 * {
     margin: 0;
-    /*size: 100vh;*/
-    padding-left: 25px;
-    padding-right: 25px;
+
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -10,8 +8,7 @@
 body {
     background-color: rgb(148, 148, 148);
     color: black;
-    padding-top: 1%;
-    padding-bottom: 1%;
+    padding: 1% 25px;
 }
 
 h1 {
@@ -112,17 +109,17 @@ table {
 }
 
 .img_casilla{
-    width: auto;
-    height: 100%;
+    width: 80px;
+    height: auto;
     padding: 0;
-    display: flex;
+    /*display: flex;*/
 }
 .txt_casilla {
-    font-size: 20px;
+    font-size: 65px;
     margin: 0;        /* elimina márgenes por defecto */
     line-height: 1;   /* opcional, controla la altura de línea */
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;     /* fuerza a ocupar la altura de la celda */
+    /*height: 100%;     !* fuerza a ocupar la altura de la celda *!*/
 }
