--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ body {
 
 h1 {
     font-family: system-ui;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .botones {
@@ -20,21 +22,21 @@ h1 {
     flex-direction: row;
     align-items: center;
     gap: 1%;
-    align-content: space-around;
+    align-content: center;
+    /*justify-content: center;*/
+    margin-top: 3%;
 }
 
 #ejercicio {
     background-color: rgb(219, 83, 83);
 }
-/*#ejercicio:nth-child(1) {*/
+/*#ejercicio>div {*/
 /*    display: flex;*/
-/*    flex-direction: column;*/
-/*    gap: 2rem;*/
 /*}*/
 
 body > div {
-    margin: 1%;
-    padding: 1%;
+    /*margin: 1%;*/
+    padding: 3%;
     border: 2px solid black;
     border-radius: 10px;
     transition: all 0.1s ease-in-out;
@@ -83,12 +85,13 @@ footer:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: auto;
 }
 table {
     margin: 0;
     padding: 0;
     /*width: 100%;*/
-    height: 100%;
+    /*height: auto;*/
     border: 4px solid black;
     background-color: rgb(0, 0, 0);
     /*border-collapse: collapse;*/
@@ -99,8 +102,8 @@ table {
 .casilla {
     border: 1px solid black;
     text-align: center;
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
     align-content: center;
     justify-content: center;
     background-color: rgb(255, 117, 117);
@@ -127,8 +130,8 @@ table {
     background-color: rgb(38, 38, 38);
 }
 .icono-bandera {
-    width: 80%;
-    height: 80%;
+    width: 60px;
+    height: 60px;
     margin: auto;
     background-color: #000000;/*el color con el que pintará la bandera*/
     /*usa la imagen como máscara*/
@@ -144,7 +147,7 @@ table {
 }
 
 .img_casilla{
-    width: 80px;
+    width: 60px;
     height: auto;
     padding: 0;
 }
@@ -158,12 +161,15 @@ table {
 }
 
 
-#stats{
-    font-size: 65px;
-    margin: 0;
-    line-height: 1;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+#stats {
+    font-size: 30px;
+    margin-top: 3%;
+    /* line-height: 1; */
+    display: flex
+;
+    gap: 0.5rem;
+    justify-content: space-evenly;
+    /* flex-direction: column; */
     align-items: center;
+    /* justify-self: flex-end; */
 }
